# Freedom

./: .gitignore  README.md  app.config.ts  package-lock.json  package.json
app/: _layout.tsx  block-overlay.tsx
app/(onboarding)/: index.tsx  permissions.tsx
app/(tabs)/: _layout.tsx  block-adult.tsx  block-keywords.tsx  block-reels.tsx  block-websites.tsx  index.tsx  settings.tsx
app/settings/: _layout.tsx  control-modes.tsx  custom-theme.tsx  permissions.tsx  update-sources.tsx
assets/blocklistsource/: hentai-blocklist.txt
components/: AppLockScreen.tsx  InteractionGuard.tsx
constants/: browsers.ts  nsfw-apps.ts  overlay-themes.ts  permissions.ts
db/: database.ts
desktop/: Cargo.toml  README.md
desktop/agent/: Cargo.toml
desktop/agent/src/: config_loader.rs  dns.rs  main.rs  updater.rs
desktop/service/: Cargo.toml
desktop/service/src/: dns.rs  dns_manager.rs  firewall_manager.rs  main.rs  process_manager.rs  service_manager.rs
desktop/shared/: Cargo.toml
desktop/ui/: index.html  package-lock.json  package.json
desktop/ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop/ui/src-tauri/icons/: icon.icns
desktop/ui/src-tauri/src/: main.rs
mobile/: app.config.ts  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/constants/: reels.ts
mobile/docs/: force-stop-recovery.md
mobile/hooks/: useThemeStyles.ts
mobile/plugins/: withAndroidPackageFix.js  withArm64Only.js
mobile/services/: BlocklistService.ts  LaunchRecoveryService.ts  ProtectionService.ts
mobile/stores/: useAppStore.ts
mobile/types/: native-modules.d.ts
plugins/: withJvmTarget17.js
providers/: ThemeProvider.tsx
services/: BlocklistService.ts  ProtectionService.ts
shared/: README.md
stores/: useAppStore.ts  useBlockingStore.ts
types/: blocking.ts
(+50 files in other folders)
