[package]
name = "libreascent-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
chrono = "0.4"
hickory-proto = "0.26"
libreascent-shared = { path = "../shared" }
reqwest = { version = "0.12" }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
windows-service = "0.8"
