[package]
name = "libreascent-desktop-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libreascent-shared = { path = "../../shared" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
