[package]
name = "libreascent-desktop-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
is_elevated = "0.1"
libreascent-shared = { path = "../../shared" }
runas = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
windows-service = "0.8"
